
      \item Names used by \code{c()}, \code{unlist()}, \code{cbind()}
      and \code{rbind()} are marked with an encoding when this can be
      ascertained.

      \item R colours are now defined to refer to the sRGB colorspace.

      The PDF, PostScript, and Quartz graphics devices record this fact.
      X11 (and Cairo) and Windows just assume that your screen conforms.
    }
  }
  
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Because they use a C99 interface which a C++ compiler is not
      required to support, \code{Rvprintf} and \code{REvprintf} are only
      defined by \file{R_ext/Print.h} in C++ code if the macro
      \code{R_USE_C99_IN_CXX} is defined when it is included.
    }
  }
  
  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD Rdiff} is now implemented in \R on
      Unix-alikes (as it has been on Windows since \R 2.12.0).

      \item \command{R CMD build} no longer does any cleaning in the
      supplied package directory: all the cleaning is done in the copy.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item \command{make check} will now fail if there are differences
      from the reference output when testing package examples and if
      environment variable \env{R_STRICT_PACKAGE_CHECK} is set to a true
      value.
    }
  }

  \subsection{DEPRECATED & DEFUNCT}{
    \itemize{
      \item \code{require(save = TRUE)} is defunct, and use of the
      \code{save} argument is deprecated.

      \item \command{R CMD check --no-latex} is defunct: use
      \option{--no-manual} instead.

      \item \command{R CMD Sd2Rd} is defunct.

      \item The \code{gamma} argument to \code{hsv()},
      \code{rainbow()}, and \code{rgb2hsv()} is deprecated
      and no longer has any effect.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{drop.terms} and the \code{[} method for class
      \code{"terms"} no longer add back an intercept.  (Reported by
      Niels Hansen.)
    }
  }
}
